--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test:concat": "vue serve src/components/SiteAside/concat/test.vue",
     "test:menu": "vue serve src/components/SiteAside/menu/test.vue",
     "test:siteAside": "vue serve src/components/SiteAside/test.vue",
-    "test:layout": "vue serve src/components/layout/test.vue"
-
+    "test:layout": "vue serve src/components/layout/test.vue",
+    "test:loading": "vue serve src/components/loading/test.vue"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
