--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "core-js": "^3.6.5",
     "highlight.js": "^10.7.2",
     "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
     "querystring": "^0.2.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -31,6 +33,7 @@
     "@vue/cli-service": "~4.5.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^4.4.1"
   }
 }
